[gd_scene load_steps=8 format=3 uid="uid://52ec065hrrvx"]

[ext_resource type="Script" path="res://scripts/Trap/spinning_spike.gd" id="1_ss455"]
[ext_resource type="Texture2D" uid="uid://bmpwmmk67680" path="res://assets/Trap Pack 1/Suriken.png" id="2_mampe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x36ba"]
radius = 17.0

[sub_resource type="Animation" id="Animation_t70id"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rf207"]
resource_name = "activate"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6m4lp"]
_data = {
"RESET": SubResource("Animation_t70id"),
"activate": SubResource("Animation_rf207")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vbd3s"]
size = Vector2(22, 22)

[node name="Spinning_Spike" type="StaticBody2D"]
script = ExtResource("1_ss455")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_x36ba")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_mampe")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6m4lp")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vbd3s")
metadata/_edit_lock_ = true

[node name="Damage_Timer" type="Timer" parent="."]
wait_time = 0.33

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Damage_Timer" to="." method="_on_damage_timer_timeout"]
